fixng cut off images and centering zoom when clicked

--- a/src/globalStyles/scss/index.scss
+++ b/src/globalStyles/scss/index.scss
@@ -378,7 +378,7 @@ body {
 }
 
 .iiz {
-  img.iiz__img {
+  img.iiz__zoom-img {
     max-height: 2000px;
     @media (max-width: 540px) {
       max-height: 500px;
